tests/invalid/variables/i04_undeclared_lhs.f
program undecllhs
  integer x
  x = 5
  z = 10
  print *, x
end
